[tool.poetry]
name = "el-scrapper"
version = "0.1.0"
description = "LinkedIn Scrapper"
authors = ["joao10lima <joao.nascimento@instruct.com.br>"]

[tool.poetry.dependencies]
python = "~=3.7"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
webdriver-manager = "^3.5.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
